Fixed menu on mobile

--- a/src/style.less
+++ b/src/style.less
@@ -118,63 +118,62 @@ html, body {
 
 		@media (max-width: 1023px) {
 
-			.nav-container {
-				display: block;
-			}
-
-			#menu-toggle {
-				display: block;
-				position: fixed;
-				top: 127px;
-				left: -3px;
-    			padding: 10px 14px 8px 14px;
-    			background-color: @light-grey;
-    			border-radius: 0 8px 8px 0;
-    			transition: left .2s ease-out;
-    			opacity: .5;
-
-    			i {
-    				pointer-events: none;
-    				font-size: 2.4em;
-    			}
-
-    			&.open {
-    				left: 234px;
-    				opacity: 1;
-
-    				> i {
-    					transform: rotate(180deg);
-    				}
-    			}
-			}
-
 			background-color: @light-grey;
 			box-shadow: 0 14px 28px rgba(0,0,0,0.15);
 			left: -300px;
 			transition: left .2s ease-out;
-			font-size: 0.6em;
+			font-size: .6em;
 
-			&.open {
-				left: 0;
-			}
+			&.open {left: 0;}
 
-			p, h3 {
-				color: @dark-grey;
-				opacity: .8;
-				background-image: none;
-				letter-spacing: 0px;
-				padding: 6px 0;
+			.nav-container {
+				display: block;
 
-				a {
+				p, h3 {
 					color: @dark-grey;
+					opacity: .8;
+					background-image: none;
+					letter-spacing: 0px;
 					padding: 6px 0;
 
-					&.active {
-						color: @accent-color;
-						font-weight: bold;
+					a {
+						color: @dark-grey;
+						padding: 6px 0;
+
+						&.active {
+							color: @accent-color;
+							font-weight: bold;
+						}
 					}
 				}
-			}	
+
+				#menu-toggle {
+					display: block;
+					width: 38px;
+					position: fixed;
+					top: 127px;
+					left: -3px;
+	    			padding: 10px 14px 8px 14px;
+	    			background-color: @light-grey;
+	    			border-radius: 0 8px 8px 0;
+	    			transition: left .2s ease-out;
+	    			opacity: .5;
+
+	    			i {
+	    				pointer-events: none;
+	    				font-size: 2.4em;
+	    			}
+
+	    			&.open {
+	    				left: 234px;
+	    				opacity: 1;
+
+	    				> i {
+	    					transform: rotate(180deg);
+	    				}
+	    			}
+				}
+			}
 		}
 	}
 }
@@ -514,10 +513,7 @@ footer {
 		> span {
 			color: @accent-color;
 			font-weight: 700;
-			
-			//&:hover {
-			//	animation: rainbow ease 1.5s infinite;
-			//}
+			cursor: help;
 
 			.sandro-peeking {
 				display: block;
@@ -573,8 +569,6 @@ ul.value > li:before {content: "\f00c";}
 ul.improvements > li:before {content: "\f00d";}
 
 // page specific styles
-
-/*
 
 .home {
 	section {
@@ -633,7 +627,7 @@ ul.improvements > li:before {content: "\f00d";}
 			}
 		}
 	}
-}*/
+}
 
 .motion .img-full {background-color: #6254e7;}
 .illustration .img-full {background-color: #fe5b60;}
